style.css
/* Controls Social Menu */
.social{
	color: blue;
	background:#50A555;
}

/* Controls Navbar */
.navbar{	
justify-content: center;
padding-bottom: 0px;
padding-top: 16px;
background: #50A555;
color: white;

}
nav{
padding-left: 16px;
padding-top: 16px;
padding-right: 16px;
margin: auto;

}
nav a{
	padding-left: 50px;
	padding-right: 50px;
	font-size: larger;
}



/* Controls Product Section */
.products .row div{
	padding: 100px;
}

h4{
	padding-bottom: 5px;
	text-align: center;
	border-bottom: 1px solid #000;
}

p{
	text-align: center;
}



a:-webkit-any-link {
    color: inherit;
    cursor: pointer;
    text-decoration:none;
}

/* Controls Footer */
footer{
	background: #50A555;
	align-content: center;
}

footer a{
	float: right;
}

